# JenkinsTest

./: CMakeLists.txt  README.md  demo.cpp
Hello/: CMakeLists.txt  Speaker.cpp  Speaker.h
